Add renew pasword chann
